--- a/Flighty/.classpath
+++ b/Flighty/.classpath
@@ -5,7 +5,11 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Flighty/lib/natives/windows"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Flighty/lib/natives/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/lwjgl.jar">
 		<attributes>
@@ -17,7 +21,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/Flighty/lib/docs/slick-docs.jar!/slick"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jars/jogg-0.0.7.jar"/>
-	<classpathentry kind="lib" path="lib/jars/jorbis-0.0.17-1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/jogg-0.0.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jars/jorbis-0.0.17-1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
