--- a/server/SeprServer.cabal
+++ b/server/SeprServer.cabal
@@ -1,5 +1,5 @@
 name: SeprServer
-version: 0.1.0.1
+version: 0.1.0.2
 cabal-version: >=1.10
 build-type: Simple
 license: AllRightsReserved
@@ -13,7 +13,7 @@ data-dir: ""
 executable SeprServer
     build-depends: base >=4.6, cereal >=0.4, bytestring >=0.10,
                    stm-lifted >=0.1, mtl >=2.1, lifted-async >=0.1,
-                   network-simple >=0.3, lifted-base >=0.2
+                   network-simple >=0.3
     main-is: SeprServer.hs
     buildable: True
     default-language: Haskell2010
