--- a/Flighty/.classpath
+++ b/Flighty/.classpath
@@ -5,7 +5,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Flighty/lib/natives/macosx"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="lib/jars/lwjgl.jar">
 		<attributes>
@@ -25,5 +24,6 @@
 	<classpathentry kind="lib" path="lib/jars/objenesis-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jars/reflectasm-1.07.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCV248CMake"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
