--- a/Flighty/.classpath
+++ b/Flighty/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/jars/objenesis-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jars/reflectasm-1.07.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/studies/ECLIPSE/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
